--- a/index.html
+++ b/index.html
@@ -1,90 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="/style.css">
-    <script src="/javascript/introduccion/script.js"></script>
-    <title>Calendar</title>
-    <style type="text/css">
-        table {
-            border-collapse: collapse;
-            width: 100%;
-            table-layout: fixed;
-        }
-        th, td {
-            text-align: center;
-            padding: 10px;
-            border: 1px solid black;
-        }
-        th {
-            background-color: #0074D9;
-            color: white;
-        }
-        td {
-            background-color: #F2F2F2;
-            color: black;
-        }
-    </style>
+  <title>Age Verifier</title>
+  <link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 <body>
-
-    <h1>Calendar</h1>
-
-    <table>
-        <tr>
-            <th>Monday</th>
-            <th>Tuesday</th>
-            <th>Wednesday</th>
-            <th>Thursday</th>
-            <th>Friday</th>
-            <th>Saturday</th>
-            <th>Sunday</th>
-        </tr>
-        <tr>
-            <td>1</td>
-            <td>2</td>
-            <td>3</td>
-            <td>4</td>
-            <td>5</td>
-            <td>6</td>
-            <td>7</td>
-        </tr>
-        <tr>
-            <td>8</td>
-            <td>9</td>
-            <td>10</td>
-            <td>11</td>
-            <td>12</td>
-            <td>13</td>
-            <td>14</td>
-        </tr>
-        <tr>
-            <td>15</td>
-            <td>16</td>
-            <td>17</td>
-            <td>18</td>
-            <td>19</td>
-            <td>20</td>
-            <td>21</td>
-        </tr>
-        <tr>
-            <td>22</td>
-            <td>23</td>
-            <td>24</td>
-            <td>25</td>
-            <td>26</td>
-            <td>27</td>
-            <td>28</td>
-        </tr>
-        <tr>
-            <td>29</td>
-            <td>30</td>
-            <td>31</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-    </table>
-
+  <div class="container">
+    <h1>Age Verifier</h1>
+    <form id="ageForm">
+      <label for="birthYear">Enter your birth year:</label>
+      <input type="number" id="birthYear" required>
+      <button type="submit">Verify</button>
+    </form>
+    <form id="beerFrom">
+        <label for="choose">Do you want to drink beer?</label>
+        <input type="text" id="beerChoose" required>
+        <button type="submit">Continue</button>
+    </form>
+    <form id="drunkedForm">
+        <label for="drunk">Are you drunk?</label>
+        <input type="text" id="drunkChoose">
+        <button type="submit">Coutinue</button>
+    </form>
+    <form id="peopleForm">
+        <label for="people">How many friends are with you?</label>
+        <input type="number" id="peopleNumber">
+        <button type="submit">Continue</button>
+    </form>
+    <form id="sleepForm">
+        <label for="sleep">In what hour will you sleep?</label>
+        <input type="number" id="sleepHours">
+        <button type="submit">Finalize</button>
+    </form>
+    </form>
+  </div>
+  <script src="/javascript/introduccion/script.js" defer></script>
 </body>
 </html>
