--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Bullet Hell</title>
-    <link rel="stylesheet" href="/style.css">
-    <style>
-        canvas {
-            border: 1px solid black;
-        }
-    </style>
+  <title>Bullet Hell Game</title>
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <canvas id="gameCanvas" width="800" height="600"></canvas>
-    <script src="/javascript/introduccion/script.js"></script>
+  <div id="game-container">
+    <div id="player"></div>
+    <div id="enemy"></div>
+  </div>
+
+  <script src="/javascript/introduccion/script.js" defer></script>
 </body>
 </html>
