--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Bullet Hell Game</title>
-  <link rel="stylesheet" href="/style.css">
+    <title>Pacman</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-  <div id="game-container">
-    <div id="player"></div>
-    <div id="enemy"></div>
-  </div>
-
-  <script src="/javascript/introduccion/script.js" defer></script>
+    <canvas id="gameCanvas"></canvas>
+    <script src="script.js"></script>
 </body>
 </html>
