--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Portafolio</title>
     <link rel="stylesheet" href="/style.css">
-    <script src="/script.js"></script>
+    <script src="/script.js" defer></script>
 </head>
 <body>
     <header>
@@ -31,7 +31,7 @@
         <div class="container">
             <h2>Portafolio</h2>
             <div class="image-gallery">
-                <img src="imagen1.jpg" alt="Imagen 1">
+                <img src="/" alt="Imagen 1">
                 <img src="imagen2.jpg" alt="Imagen 2">
                 <img src="imagen3.jpg" alt="Imagen 3">
             </div>
